--- a/notes/linear-algebra/style.css
+++ b/notes/linear-algebra/style.css
@@ -5,6 +5,8 @@
  * Licensed under MIT (https://github.com/vincentdoerig/latex-css/blob/master/LICENSE)
 */
 
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css");
+
 @font-face {
   font-family: 'Latin Modern';
   font-style: normal;
