--- a/notes/linear-algebra/style.css
+++ b/notes/linear-algebra/style.css
@@ -819,6 +819,37 @@ h6 {
     /* Use lowercase letters with parentheses */
 }
 
+#toTop {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 1.2em;
+    font-weight: bold;
+    border: none;
+    outline: none;
+    background-color: rgba(145, 145, 145, 0.567);
+    color: rgb(237, 237, 237);
+    cursor: pointer;
+    width: 50px;
+    /* Adjust button width */
+    height: 50px;
+    /* Adjust button height */
+    line-height: 40px;
+    /* Adjust line-height to center text vertically */
+    text-align: center;
+    /* Center text horizontally */
+    padding: 0;
+    /* Remove padding */
+    border-radius: 50%;
+    /* Make it circular */
+}
+
+#toTop:hover {
+    background-color: #747474;
+}
+
 
 @media print {
   * {
