--- a/slides/template/index.html
+++ b/slides/template/index.html
@@ -49,27 +49,26 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 
 			<section>
-				<h3 style="font-size:150%">Multivariate Calculus <br/>& <br/>Ordinary Differential Equations</h3>
+				<h3 style="font-size:150%">Multivariate Calculus <br />& <br />Ordinary Differential Equations</h3>
 				<p>Week 1</p>
-				<br/><br/>
+				<br /><br />
 			</section>
 
 			<!--Section with format-->
-			
+
 
 			<!--Section with background image-->
-			<section  data-auto-animate data-background-color="rgb(0,0,0)"
-					data-background-image="https://dynamicmath.xyz/math2001/images/review/maryam.jpeg"
-					data-background-opacity="0.3"
-					data-background-position="right 45% bottom -10px"
-					>
+			<section data-auto-animate data-background-color="rgb(0,0,0)"
+				data-background-image="https://dynamicmath.xyz/math2001/images/review/maryam.jpeg"
+				data-background-opacity="0.3" data-background-position="right 45% bottom -10px">
 
-					<p style="font-size:58px"><em>The beauty of mathematics shows itself to patient followers.</em></p>
-					
-					<p style="font-size:38px"><a href="https://en.wikipedia.org/wiki/Maryam_Mirzakhani" target="_blank">Maryam Mirzakhani</a></p>
-					
-					
-					<br/><br/><br/><br/>
+				<p style="font-size:58px"><em>The beauty of mathematics shows itself to patient followers.</em></p>
+
+				<p style="font-size:38px"><a href="https://en.wikipedia.org/wiki/Maryam_Mirzakhani"
+						target="_blank">Maryam Mirzakhani</a></p>
+
+
+				<br /><br /><br /><br />
 			</section>
 
 			<section data-auto-animate>
@@ -99,22 +98,23 @@
 					</p>
 
 				</div>
-				<br/><br/>
+				<br /><br />
 			</section>
 
 			<!--Section with table-->
 			<section data-auto-animate>
 				<h3>Vector Calculus</h3>
 				<p><strong>Green's Theorem</strong></p>
-			 	<div class="left-txt size-60">
-					
+				<div class="left-txt size-60">
+
 					<table>
 						<tr>
 							<td style="width:50%">
 								<p>
-									
+
 									\[
-									\iint\limits_D\left( \frac{\partial F_2}{\partial x}- \frac{\partial F_1}{\partial y} \right) \,dA = \int\limits_C F_1\, dx + F_2 \,dy
+									\iint\limits_D\left( \frac{\partial F_2}{\partial x}- \frac{\partial F_1}{\partial
+									y} \right) \,dA = \int\limits_C F_1\, dx + F_2 \,dy
 									\]
 								</p>
 							</td>
@@ -125,9 +125,9 @@
 						</tr>
 					</table>
 
-			 	</div>
+				</div>
 
-			 		<br/><br/>
+				<br /><br />
 			</section>
 
 			<!--
@@ -137,11 +137,10 @@
 			-->
 
 			<!--Section with iframe background-->
-			<section  
-				data-background-color="rgb(0,0,0)" 
+			<section data-background-color="rgb(0,0,0)"
 				data-background-iframe="https://dynamicmath.xyz/math2001/sketches/solids-02/"
-  			    data-background-interactive>
-  
+				data-background-interactive>
+
 			</section>
 
 			<!--Section with GGB iframe-->
@@ -149,20 +148,81 @@
 				<h3>Multiple integrals</h3>
 				<p class="size-70">1. <strong>Fubini's theorem</strong></p>
 				<div>
-				  <iframe
-					scrolling="no"
-					title="Fubini's theorem: Square regions"
-					src="https://www.geogebra.org/material/iframe/id/pkcqbzhy/width/637/height/472/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/false/rc/false/ld/false/sdz/true/ctl/false"
-					width="637px"
-					height="472px"
-					style="border: 0px"
-					data-preload
-					allowfullscreen=""
-				  >
-				  </iframe>
+					<iframe scrolling="no" title="Fubini's theorem: Square regions"
+						src="https://www.geogebra.org/material/iframe/id/pkcqbzhy/width/637/height/472/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/false/rc/false/ld/false/sdz/true/ctl/false"
+						width="637px" height="472px" style="border: 0px" data-preload allowfullscreen="">
+					</iframe>
 				</div>
-				<br/>
+				<br />
 			</section>
+
+			<section>
+
+				<div class="size-60">
+					<img style="width: 50%;" src="https://esc-maths.github.io/slides/1010eng/images/week-12/polynomials.svg"
+						data-preview-video="https://www.dynamicmath.xyz/math1052/images/lect-02/parabola-water.mov">
+					<br />
+					<a href="https://www.dynamicmath.xyz/" data-preview-link>Open Link</a>
+				</div>
+			</section>
+
+			<section>
+				<div class="size-60">
+					<a data-preview-image="https://esc-maths.github.io/slides/1010eng/images/week-12/polynomials.svg">📸 Open Plot</a>
+				<br/><br/>
+				<button data-preview-video="https://www.dynamicmath.xyz/math1052/images/lect-02/parabola-water.mov">🎥 Open Video</button>
+				</div>
+			</section>
+
+			<section>
+					<h5>
+						Matrix determinant
+					</h5>
+					<div class=" left-txt">
+						<p>
+							For a $2\times 2 $ matrix
+							\(\,A =
+							\left(
+							\begin{array}{r}
+							a & b \\
+							c & d \\
+							\end{array}
+							\right),\;
+							\)
+							<span class="fragment" data-fragment-index="0">
+								then
+							</span>
+						</p>
+						<p style="text-align: center;">
+							<span class="fragment" data-fragment-index="0">
+								\(
+								\text{det}(A)
+								\)
+							</span>
+							<span class="fragment" data-fragment-index="1">
+								\(= \left|
+								\begin{array}{r}
+								a & b \\
+								c & d \\
+								\end{array}
+								\right|
+								\)
+							</span>
+							<span class="fragment" data-fragment-index="2">
+								\(
+								= ad - bc.
+								\)
+							</span>
+						</p>
+
+
+
+
+					</div>
+
+					<br /><br />
+					<br /><br />
+				</section>
 
 
 			<!-- Ends sections -->
@@ -170,7 +230,7 @@
 		</div>
 	</div>
 
-	
+
 	<script src="../revealjs-5-2/dist/reveal.js"></script>
 	<script src="../revealjs-5-2/plugin/math/math.js"></script>
 	<script src="../revealjs-5-2/plugin/highlight/highlight.js"></script>
