--- a/tools/latex-online-notes/template/content/index.html
+++ b/tools/latex-online-notes/template/content/index.html
@@ -7,35 +7,60 @@
   <br><br>
 
   <header>
-    <iframe frameborder="0" width="100%" height="350px" scrolling="no" src="https://www.dynamicmath.xyz/sketches/shaders/box-space/" style="border: 1px solid black; overflow: hidden;">
-                </iframe>
+    <iframe frameborder="0" width="100%" height="350px" scrolling="no"
+      src="https://www.dynamicmath.xyz/sketches/shaders/infinite-magic-room/" style="border: 1px solid black; overflow: hidden;">
+    </iframe>
 
-    <br/><br/>
+    <br /><br />
 
-    <h1>Contents</h1>
+    <div style="text-align: center;">
+      <h1>LaTeX Notes CSS</h1>
+    </div>
+
   </header>
 
-   <nav role="navigation" class="toc">
-        
-        <ol>
-          <li><a href="index.html">Introduction</a></li>
-          <li><a href="notes.html">What is <span class="latex">L<span>a</span>T<span>e</span>X</span> CSS?</a></li>
-          <li><a href="elements.html">Elements</a></li>
-        </ol>
+  <br />
+  <hr />
 
-      </nav>
+  <h2>Contents</h2>
+
+  <nav role="navigation" class="toc">
+
+    <ol>
+      <li><a href="#what-is-it">What is <span class="latex">L<span>a</span>T<span>e</span>X</span> Online CSS?</a></li>
+      <li><a href="notes.html"><span class="latex">L<span>a</span>T<span>e</span>X</span> CSS</a></li>
+      <li><a href="elements.html">HTML Elements</a></li>
+    </ol>
+
+  </nav>
+
+  <br/><hr/>
 
   <main>
 
     <article>
 
-      <br/>
+      <h2 id="what-is-it">What is <span class="latex">L<span>a</span>T<span>e</span>X</span> Notes CSS?</h2>
+
+      <p>
+        This CSS library turns your HTML document into a
+        website that looks like a
+        <span class="latex">L<span>a</span>T<span>e</span>X</span>
+        document. Write semantic HTML.
+      </p>
+
+      <p>
+        This project is based on the  <span class="latex">L<span>a</span>T<span>e</span>X</span>.CSS 
+        project developed by Vincent Dörig.
+        The source code can be found on GitHub at
+        <a href="https://github.com/vincentdoerig/latex-css">https://github.com/vincentdoerig/latex-css</a>.
+      </p>
 
     </article>
 
   </main>
 
- 
+
   <!-- Ends main content -->
 
 </section>
