--- a/tools/latex-online-notes/template/content/notes.html
+++ b/tools/latex-online-notes/template/content/notes.html
@@ -7,7 +7,7 @@
   <br><br>
 
   <header>
-    <h1>LaTeX.css</h1>
+    <h1>LaTeX CSS</h1>
   </header>
 
   <br />
@@ -347,7 +347,7 @@
       <h2 id="html-elements">HTML Elements</h2>
       <p>
         For a preview of all HTML elements with LaTeX.css, check out the
-        <a href="/elements">HTML5 elements test page</a>.
+        <a href="elements.html">HTML5 elements test page</a>.
       </p>
 
       <h3 id="text-formatting">Text Formatting</h3>
