--- a/tools/latex-online-notes/template/includes/navigation.html
+++ b/tools/latex-online-notes/template/includes/navigation.html
@@ -12,7 +12,7 @@
             <span class="content-hover-previous">{{navigation.prev.label}}</span>
             {% endif %} 
             <span class="content-hover">Home</span>
-            <span class="content-original"><span class="latex">L<span>a</span>T<span>e</span>X</span> Notes</span>
+            <span class="content-original"><span class="latex">L<span>a</span>T<span>e</span>X</span> Notes CSS</span>
             {% if navigation.next %}
             <span class="content-hover-next">{{navigation.next.label}}</span>
             {% endif %} 
