--- a/tools/latex-online-notes/template/content/elements.html
+++ b/tools/latex-online-notes/template/content/elements.html
@@ -5,7 +5,7 @@
   <br><br>
 
   <header role="banner">
-    <h1>HTML5 Test Page</h1>
+    <h1>HTML5 Elements</h1>
     <p>This is a test page filled with common HTML elements to be used to provide visual feedback whilst building CSS
       systems and frameworks.</p>
   </header>
