--- a/assets/inf-room/style.css
+++ b/assets/inf-room/style.css
@@ -24,7 +24,7 @@ body {
 
   background-color: rgba(0, 0, 0, 0.85);
   color: rgb(255, 255, 255);
-  padding: 1.5rem;
+  padding: 0.0rem 1.5rem 0.5rem 1.5rem;
   border-radius: 1rem;
   box-shadow: 0 8px 24px rgba(255, 255, 255, 0.1);
   width: 30%;
@@ -48,16 +48,6 @@ body {
 
 canvas {
   display: block;
-}
-
-
-a {
-  color: #ff0;
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
 }
 
 
