--- a/assets/inf-room/style.css
+++ b/assets/inf-room/style.css
@@ -4,7 +4,7 @@ body {
   background-color: #000;
   color: #fff;
   font-family: Monospace;
-  font-size: 1.2rem;
+  font-size: 1.15rem;
   line-height: 2em;
   overscroll-behavior: none;
 
@@ -50,19 +50,6 @@ canvas {
   display: block;
 }
 
-
-#info {
-  position: absolute;
-  top: 0px;
-  width: 100%;
-  padding: 10px;
-  box-sizing: border-box;
-  text-align: center;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  pointer-events: none;
-  z-index: 10;
-  /* TODO Solve this in HTML */
+a {
+  text-decoration: none;
 }
