--- a/slides/2201nsc/sketches/svd-image-compression/style.css
+++ b/slides/2201nsc/sketches/svd-image-compression/style.css
@@ -5,3 +5,95 @@ html, body {
 canvas {
   display: block;
 }
+
+input[type=range] {
+  width: 100%;
+  margin: 8.05px 0;
+  background-color: transparent;
+  -webkit-appearance: none;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  background: #797d81;
+  border: 0.2px solid #010101;
+  border-radius: 9px;
+  width: 100%;
+  height: 4.9px;
+  cursor: pointer;
+}
+input[type=range]::-webkit-slider-thumb {
+  margin-top: -8.25px;
+  width: 21px;
+  height: 21px;
+  background: #4a74ea;
+  border: 2.1px solid #000000;
+  border-radius: 21px;
+  cursor: pointer;
+  -webkit-appearance: none;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #868a8e;
+}
+input[type=range]::-moz-range-track {
+  background: #797d81;
+  border: 0.2px solid #010101;
+  border-radius: 9px;
+  width: 100%;
+  height: 4.9px;
+  cursor: pointer;
+}
+input[type=range]::-moz-range-thumb {
+  width: 21px;
+  height: 21px;
+  background: #4a74ea;
+  border: 2.1px solid #000000;
+  border-radius: 21px;
+  cursor: pointer;
+}
+input[type=range]::-ms-track {
+  background: transparent;
+  border-color: transparent;
+  border-width: 9.05px 0;
+  color: transparent;
+  width: 100%;
+  height: 4.9px;
+  cursor: pointer;
+}
+input[type=range]::-ms-fill-lower {
+  background: #6d7074;
+  border: 0.2px solid #010101;
+  border-radius: 18px;
+}
+input[type=range]::-ms-fill-upper {
+  background: #797d81;
+  border: 0.2px solid #010101;
+  border-radius: 18px;
+}
+input[type=range]::-ms-thumb {
+  width: 21px;
+  height: 21px;
+  background: #4a74ea;
+  border: 2.1px solid #000000;
+  border-radius: 21px;
+  cursor: pointer;
+  margin-top: 0px;
+  /*Needed to keep the Edge thumb centred*/
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: #797d81;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #868a8e;
+}
+/*TODO: Use one of the selectors from https://stackoverflow.com/a/20541859/7077589 and figure out
+how to remove the virtical space around the range input in IE*/
+@supports (-ms-ime-align:auto) {
+  /* Pre-Chromium Edge only styles, selector taken from hhttps://stackoverflow.com/a/32202953/7077589 */
+  input[type=range] {
+    margin: 0;
+    /*Edge starts the margin from the thumb, not the track as other browsers do*/
+  }
+}
+
